@@ -241,6 +241,9 @@ Branch YARN-2928: Timeline Server Next Generation: Phase 1
     YARN-4700. ATS storage has one extra record each time the RM got restarted.
     (Naganarasimha G R via varunsaxena)
 
+    YARN-4712. CPU Usage Metric is not captured properly in YARN-2928.
+    (Naganarasimha G R via varunsaxena)
+
 Trunk - Unreleased
 
   INCOMPATIBLE CHANGES
